--- a/rocky_node_news/views/index.ejs
+++ b/rocky_node_news/views/index.ejs
@@ -1,10 +1,10 @@
 <html>
 	<head>
 		<title>Rocky News</title>
-		<link href="offline_resources/bootstrap.min.css" rel="stylesheet">
+		<link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 
-		<script src="offline_resources/angular.min.js"></script>
-		<script src="offline_resources/angular-ui-router.js"></script>
+		<script src="/javascripts/angular.min.js"></script>
+		<script src="/javascripts/angular-ui-router.js"></script>
 		<script src="/javascripts/angularApp.js"></script>
 		<style> .glyphicon-thumbs-up { cursor:pointer } </style>
 	</head>
